# toggl-rust

./: .gitignore  Cargo.toml
src/: client.rs  day_of_week.rs  dto.rs  endpoints.rs  main.rs  models.rs  timestamp_millis.rs
src/endpoints/: me.rs  time_entries.rs
