[package]
name = "togglrust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.24", features = ["serde"] }
reqwest = "0.11.17"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "3.0.0", features = ["chrono"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
